# fair-credit-scorer-bias-mitigation

./: .bandit  .commitizen.yaml  .coveragerc  .dockerignore  .editorconfig  .env.example  .fossa.yml  .gitignore  .mutmut_config  .pre-commit-config.yaml  API_USAGE_GUIDE.md  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_EXECUTION_FINAL_STATUS.md  AUTONOMOUS_EXECUTION_STATUS_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_STATUS.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_STATUS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_FAIRNESS_BREAKTHROUGH_SUMMARY.md  README.md  RESEARCH_PUBLICATION_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SPRINT_BOARD.md  (+40 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  SECURITY_POLICY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.slsa/: policy.yaml
.terragon/: autonomous-executor.py  config.yaml  value-discovery-engine.py
DOCS/: AUTONOMOUS_BACKLOG_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  USAGE_GUIDE.md  backlog.yml
architecture/: architecture_review.md
config/: default.yaml  monitoring.yaml  quality_gates.yaml  repo-hygiene.yaml
contract_testing/: __init__.py  pact_config.py
data/: credit_data.csv
deployment/: Dockerfile
docs/: ADVANCED_SDLC_AUTOMATION.md  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP.md  PERFORMANCE_OPTIMIZATION.md  REPO_HYGIENE_BOT.md  ROADMAP.md  SETUP_REQUIRED.md  gen_ref_pages.py  index.md
fair_credit/: __init__.py  bias_detector.py  bias_mitigator.py  fairness_report.py
load_testing/: __init__.py  locustfile.py
notebooks/: fairness_exploration.ipynb
publications/: causal_adversarial_framework.md  pareto_fairness_optimization.md  research_summary.md  unanticipated_bias_detection.md
quality_gates/: __init__.py  sonar_runner.py
research_output/: research_summary_20250821_150829.txt
sbom/: __init__.py  generate_sbom.py
scripts/: advanced_release_automation.py  ai_code_reviewer.py  benchmark_runner.py  build_and_scan.sh  intelligent_dependency_manager.py  intelligent_deployment_manager.py  observability_platform.py  production_deployment_orchestrator.py  release_automation.py  run-hygiene-bot.sh  run_comprehensive_tests.py  run_contract_tests.sh  run_load_tests.py  run_mutation_tests.py  security_automation_suite.py  setup_sbom_tools.sh
src/: __init__.py  advanced_input_validation.py  architecture_review.py  autonomous_backlog_executor.py  autonomous_learning_system.py  autonomous_sdlc_executor.py  backlog_manager.py  baseline_model.py  bias_mitigator.py  comprehensive_logging.py  config.py  data_loader_preprocessor.py  data_versioning.py  distributed_computing_framework.py  distributed_fairness_optimizer.py  distributed_quantum_fairness_platform.py  enhanced_error_recovery.py  evaluate_fairness.py  explainability_api.py  fairness_metrics.py  health_check.py  logging_config.py  metrics_reporter.py  metrics_server.py  model_explainability.py  monitoring.py  neural_optimization_engine.py  performance_benchmarking.py  performance_monitoring.py  performance_scaling_engine.py  production_deployment_config.py  progressive_quality_gates.py  progressive_quality_gates_enhanced.py  repo_hygiene_bot.py  repo_hygiene_cli.py  robust_error_handling.py  robust_error_handling_enhanced.py  robust_quantum_fairness_system.py  run_tests.py  scalable_performance_engine.py  (+4 more)
tests/: conftest.py  sprint_acceptance_criteria.json  test_advanced_input_validation.py  test_architecture_review_coverage.py  test_audit-repository-structure-and-dependencies.py  test_autonomous_sdlc.py  test_autonomous_system_integration.py  test_backlog_manager.py  test_baseline-model-training.py  test_basic_functionality.py  test_cli-evaluation-script.py  test_config_integration.py  test_config_module_integration.py  test_configuration_management.py  test_create-architecture-diagram.py  test_data_loader_preprocessor_coverage.py  test_data_versioning.py  test_dataset-loader.py  test_distributed_fairness_optimizer.py  test_document-data-pipeline-and-model.py  test_end_to_end_workflows.py  test_enhanced_error_recovery.py  test_error_handling_improvements.py  test_evaluation-metrics.py  test_fairness_metrics.py  (+17 more)
(+128 files in other folders)
