[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fair_credit_scorer_bias_mitigation"
version = "0.0.1"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fair_credit_scorer_bias_mitigation"]

[project.scripts]
fairness-eval = "fair_credit_scorer_bias_mitigation.cli:main"
